@@ -43,8 +43,12 @@ include(MacroLogFeature)
 
 option(ENABLE_TAGLIB "Enable TagLib library (required for tag editing, replaygain calculation, device support, etc)" ON)
 option(ENABLE_TAGLIB_EXTRAS "Enable TagLib-Extras library (used by tag editing, replaygain calculation, device support, etc)" ON)
-option(ENABLE_HTTP_STREAM_PLAYBACK "Enable playback of MPD HTTP streams (Phonon required for Qt4, QtMultimedia for Qt5)" OFF)
-option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" OFF)
+option(ENABLE_HTTP_STREAM_PLAYBACK "Enable playback of MPD HTTP streams (LibVLC or, Phonon for Qt4, QtMultimedia for Qt5)" ON)
+if (WIN32 OR APPLE)
+    option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" OFF)
+else (WIN32 OR APPLE)
+    option(ENABLE_LIBVLC "Use libVLC for MPD HTTP stream playback (if ENABLE_HTTP_STREAM_PLAYBACK=ON)" ON)
+endif (WIN32 OR APPLE)
 option(ENABLE_KDE "Enable KDE libraries" OFF)
 option(ENABLE_QT5 "Build against Qt5" OFF)
 option(ENABLE_UBUNTU "Build for the Ubuntu SDK" OFF)
@@ -777,7 +781,11 @@ else (ENABLE_KDE)
                 install(PROGRAMS ${CMAKE_BINARY_DIR}/tags/cantata-tags DESTINATION ${MACOSX_BUNDLE_APP_DIR})
             endif (ENABLE_EXTERNAL_TAGS)
         endif (TAGLIB_FOUND)
-        install_qt5_executable(cantata.app "qjpeg;qsvg;qsvgicon;qcocoa;qsqlite")
+        if (ENABLE_HTTP_STREAM_PLAYBACK AND NOT ENABLE_LIBVLC)
+            install_qt5_executable(cantata.app "qjpeg;qsvg;qsvgicon;qcocoa;qsqlite;qavfmediaplayer")
+        else (ENABLE_HTTP_STREAM_PLAYBACK AND NOT ENABLE_LIBVLC)
+            install_qt5_executable(cantata.app "qjpeg;qsvg;qsvgicon;qcocoa;qsqlite")
+        endif (ENABLE_HTTP_STREAM_PLAYBACK AND NOT ENABLE_LIBVLC)
     elseif (NOT ENABLE_UBUNTU)
         ADD_EXECUTABLE(cantata ${CANTATA_SRCS} ${CANTATA_MOC_SRCS} ${CANTATA_RC_SRCS} ${CANTATA_UI_HDRS})
         install(TARGETS cantata RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
@@ -880,23 +888,23 @@ if (ENABLE_UBUNTU)
     install(FILES ubuntu/manifest.json ubuntu/cantata-ubuntu.json ubuntu/cantata-ubuntu.desktop ubuntu/icons/desktop/cantata.png DESTINATION .)
 
 else (ENABLE_UBUNTU)
-    if (NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE)
+    if ((NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE) OR (NOT ENABLE_HTTP_STREAM_PLAYBACK))
         message("-----------------------------------------------------------------------------")
         message("-- The following STANDARD options have been DISABLED.")
         message("-----------------------------------------------------------------------------")
         if (NOT ENABLE_DEVICES_SUPPORT)
             message("    * Devices Tab - Media device support (UMS, MTP, AudioCD).")
         endif (NOT ENABLE_DEVICES_SUPPORT)
+        if (NOT ENABLE_HTTP_STREAM_PLAYBACK)
+            message("    * MPD HTTP Streams - Playback MPD HTTP output stream via libVLC.")
+        endif (NOT ENABLE_HTTP_STREAM_PLAYBACK)
         message("")
-    endif (NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE)
+    endif ((NOT ENABLE_DEVICES_SUPPORT AND NOT WIN32 AND NOT APPLE) OR (NOT ENABLE_HTTP_STREAM_PLAYBACK))
 
-    if ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR ENABLE_HTTP_STREAM_PLAYBACK OR (NOT ENABLE_KDE AND ENABLE_PROXY_CONFIG))
+    if ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR (NOT ENABLE_KDE AND ENABLE_PROXY_CONFIG))
         message("-----------------------------------------------------------------------------")
         message("-- The following NON STANDARD options have been ENABLED.")
         message("-----------------------------------------------------------------------------")
-        if (ENABLE_HTTP_STREAM_PLAYBACK)
-            message("    * MPD HTTP Streams - Playback MPD HTTP output stream via Phonon (Qt4),  QtMultimedia (Qt5) or LibVLC.")
-        endif (ENABLE_HTTP_STREAM_PLAYBACK)
         if (ENABLE_PROXY_CONFIG)
             message("    * Proxy Configuration")
         endif (ENABLE_PROXY_CONFIG)
@@ -904,7 +912,7 @@ else (ENABLE_UBUNTU)
             message("    * Remote Devices - Access sshfs, Samba, and local folders as devices. (EXPERIMENTAL)")
         endif (ENABLE_REMOTE_DEVICES)
         message("")
-    endif ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR ENABLE_HTTP_STREAM_PLAYBACK OR (NOT ENABLE_KDE AND ENABLE_PROXY_CONFIG))
+    endif ((ENABLE_DEVICES_SUPPORT AND ENABLE_REMOTE_DEVICES) OR (NOT ENABLE_KDE AND ENABLE_PROXY_CONFIG))
 
     if (ENABLE_MODEL_TEST AND NOT ENABLE_KDE AND NOT ENABLE_QT5)
         message("-----------------------------------------------------------------------------")
